nginx.confをJinja2テンプレート対応＆ユーザー＆グループ追加

--- a/roles/nginx/tasks/main.yml
+++ b/roles/nginx/tasks/main.yml
@@ -18,3 +18,25 @@
     name: nginx
     state: started
     enabled: true
+
+- name: nginx.conf テンプレートを展開
+  template:
+    src: nginx.j2.conf
+    dest: /etc/nginx/nginx.conf
+    validate: nginx -t -c %s
+  notify:
+    - Nginxをリロード
+
+- name: Nginx用グループを作成
+  group:
+    name: "{{ nginx_group }}"
+    system: true
+
+- name: Nginx用ユーザーを作成
+  user:
+    name: "{{ nginx_user }}"
+    home: /var/lib/nginx
+    shell: /sbin/nologin
+    groups: "{{ nginx_group }}"
+    append: true
+    system: true
