--- a/roles/nginx/templates/nginx.j2.conf
+++ b/roles/nginx/templates/nginx.j2.conf
@@ -1,8 +1,9 @@
 # For more information on configuration, see:
 #   * Official English Documentation: http://nginx.org/en/docs/
 #   * Official Russian Documentation: http://nginx.org/ru/docs/
+# {{ ansible_managed }}
 
-user nginx;
+user {{ nginx_user }} {{ nginx_group }};
 worker_processes auto;
 error_log /var/log/nginx/error.log;
 pid /run/nginx.pid;
@@ -33,11 +34,11 @@ http {
     # Load modular configuration files from the /etc/nginx/conf.d directory.
     # See http://nginx.org/en/docs/ngx_core_module.html#include
     # for more information.
-    include /etc/nginx/conf.d/*.conf;
+    include {{ nginx_config_dir }}/*.conf;
 
     server {
-        listen       80 default_server;
-        listen       [::]:80 default_server;
+        listen       {{ nginx_default_port  }} default_server;
+        listen       [::]:{{ nginx_default_port  }} default_server;
         server_name  _;
         root         /usr/share/nginx/html;
 
