--- a/wordpress.yml
+++ b/wordpress.yml
@@ -2,12 +2,23 @@
 - name: CentOS7上にWordPressをセットアップする
   hosts: all
   become: true
+  vars:
+    db_name: wordpress
+    db_user: wordpress
+    db_password: myQ1InsecureP@ssW0rd
   roles:
     - name: common
       tags:
         - common
 
     - name: mariadb
+      vars:
+        mariadb_databases:
+          - name: "{{ db_name }}"
+        mariadb_users:
+          - name: "{{ db_user }}"
+            password: "{{ db_password }}"
+            priv: "{{ db_name }}.*:ALL"
       tags:
         - mariadb
 
