wordpress.yml ansible-playbook コマンド実行パス

--- a/wordpress.yml
+++ b/wordpress.yml
@@ -9,8 +9,8 @@
       lineinfile:
         dest: /etc/sudoers
         regexp: '^Defaults:{{ ansible_user }}\srequiretty'
-        line: 'Defaults:{{ ansible_user }} requiretty '
-        validate: 'visudo -cd %s'
+        line: 'Defaults:{{ ansible_user }} requiretty'
+        validate: 'visudo -cf %s'
         backup: yes
 
 - name: CentOS7上にWordPressをセットアップする
@@ -50,5 +50,13 @@
         - nginx
 
     - name: wordpress
+      vars:
+        wordpress_db_name: "{{ db_name }}"
+        wordpress_db_user_name: "{{ db_user }}"
+        wordpress_db_user_password: "{{ db_password }}"
+        wordpress_nginx_user: "{{ nginx_user }}"
+        wordpress_nginx_group: "{{ nginx_group }}"
+        wordpress_nginx_config_dir: "{{ nginx_config_dir }}"
+        wordpress_php_fpm_config_dir: "{{ php_fpm_config_dir }}"
       tags:
         wordpress
